# OpenKamerBE

./: .gitignore  README.md  pyproject.toml  read_pdf.ipynb
fiche/: count.py  read_fiche.py
parlementaire_stukken/: count.py  json_to_mongo.py
peoplescraper/: scrapy.cfg
peoplescraper/peoplescraper/: items.py  middlewares.py  pipelines.py  settings.py
peoplescraper/peoplescraper/spiders/: people_spider.py
plenaire/: explore.ipynb  get_html.py
src/analyses/: dissenters.py  doublecheck_vote_counts.py
src/common/: io_utils.py  objects.py  text_corrections.py
src/mensen/: get_html.py  get_people.py
src/parlementaire_stukken/: docker-compose.yaml  eurovoc.ipynb  get_html.py  get_parlementaire_stukken.py  read_fiche.py
src/plenaire/: .gitattributes  explore.ipynb  get_html.py  get_plenaire.py  identifiers.py  parsers.py
