[project]
name = "openkamer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Victor Sonck", email = "openkamer@projectwhy.be"},
]
dependencies = [
    "jupyter>=1.0.0",
    "beautifulsoup4>=4.12.3",
    "unidecode>=1.3.8",
    "scrapy>=2.11.2",
    "tqdm>=4.66.4",
    "retry>=0.9.2",
    "rdflib>=7.0.0",
    "plotly>=5.22.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=openkamer",
]
